- Added swipe feature to dismiss posts
- Added Description page that can be used to open posts

- Removed unused import statements

- Edited top and bottom margins of recycle view in dashboard

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,9 @@
             android:name=".PostDetailActivity"
             android:exported="false" />
         <activity
+            android:name=".PostDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".AccountActivity"
             android:exported="false" />
 
