--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
             android:name=".EmailVerificationActivity"
             android:exported="false"/>
         <activity
+            android:name=".Profile"
+            android:exported="false"/>
+        <activity
             android:name=".PostDetailActivity"
             android:exported="false" />
         <activity
