--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,26 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".PostCreationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WorkoutRoutineCreationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="Settings Activity"
+            android:parentActivityName=".Profile">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
             android:name=".SignUpPage"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Profile"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".PostDetailActivity"
             android:exported="false" />
