--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.6.1"
 cardview = "1.0.0"
+circleprogress = "1.2.1"
 constraintlayoutVersion = "2.1.3"
 firebaseBom = "33.4.0"
 githubGlideVersion = "4.12.0"
@@ -24,7 +25,10 @@ playServicesAuth = "21.2.0"
 preference = "1.2.1"
 
 [libraries]
+
+
 cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
+circleprogress = { module = "com.github.lzyzsd:circleprogress", version = "1.2.1" }
 com-github-bumptech-glide-glide2 = { module = "com.github.bumptech.glide:glide", version.ref = "githubGlideVersion" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "githubGlideVersion" }
 constraintlayout-v213 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
