Added Email Verification at Registration and Log in Page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
             android:name=".Profile"
             android:exported="false"/>
         <activity
+            android:name=".EmailVerificationActivity"
+            android:exported="false"/>
+        <activity
             android:name=".Profile"
             android:exported="false"/>
         <activity
