--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,9 @@
             android:name=".EmailVerificationActivity"
             android:exported="false"/>
         <activity
+            android:name=".EmailVerificationActivity"
+            android:exported="false"/>
+        <activity
             android:name=".Profile"
             android:exported="false"/>
         <activity
