--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ circleprogress = "1.2.1"
 constraintlayoutVersion = "2.1.3"
 firebaseBom = "33.4.0"
 githubGlideVersion = "4.12.0"
+googleServices = "4.4.2"
 googleServicses = "4.3.5"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -35,6 +36,7 @@ constraintlayout-v213 = { module = "androidx.constraintlayout:constraintlayout",
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+google-services = { module = "com.google.gms:google-services", version.ref = "googleServices" }
 google-servicses = { module = "com.google.gms:google-servicses", version.ref = "googleServicses" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
