--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:name=".Profile"
             android:exported="false" />
         <activity
+            android:name=".EmailVerificationActivity"
+            android:exported="false"/>
+        <activity
             android:name=".PostDetailActivity"
             android:exported="false" />
         <activity
