--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,13 @@
 [versions]
 agp = "8.6.1"
+androidxJunit = "1.2.1"
 cardview = "1.0.0"
 circleprogress = "1.2.1"
 constraintlayoutVersion = "2.1.3"
+espressoCoreVersion = "3.6.1"
 firebaseBom = "33.4.0"
 githubGlideVersion = "4.12.0"
 googleServicses = "4.3.5"
-junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 appcompat = "1.6.1"
@@ -24,10 +25,21 @@ firebaseAuth = "23.0.0"
 playServicesAuth = "21.2.0"
 preference = "1.2.1"
 recyclerview = "1.3.2"
+junit = "4.13.2"
+junit-v121 = "1.2.1"
+espresso-core-v361 = "3.6.1"
+robolectric = "4.10.3"
+mockito-core = "5.5.0"
 
 [libraries]
 
-
+androidx-test-core = { group = "androidx.test", name = "core", version = "1.5.0" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version = "1.1.5" }
+junit = { module = "junit:junit", version.ref = "junit" }
+junit-v121 = { module = "androidx.test.ext:junit", version.ref = "junit-v121" }
+espresso-core-v361 = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core-v361" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito-core" }
 cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 circleprogress = { module = "com.github.lzyzsd:circleprogress", version = "1.2.1" }
 com-github-bumptech-glide-glide2 = { module = "com.github.bumptech.glide:glide", version.ref = "githubGlideVersion" }
@@ -37,7 +49,6 @@ firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 google-servicses = { module = "com.google.gms:google-servicses", version.ref = "googleServicses" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
