--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,22 +2,34 @@ name: Android CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
+
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
-    - name: Build and run tests
+
+    - name: Build the project
       run: ./gradlew build
+
+    - name: Run unit tests
+      run: ./gradlew testDebugUnitTest
+
+    - name: Run instrumented tests
+      run: ./gradlew connectedDebugAndroidTest
