The Test Ran but old version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
 
     <application
         android:allowBackup="true"
@@ -56,31 +58,13 @@
             android:exported="false" />
 
         <activity
-
             android:name=".EmailVerificationActivity"
             android:exported="false"/>
-        <activity
-                  
-            android:name=".Profile"
-            android:exported="false" />
 
-        <activity
-            android:name=".EmailVerificationActivity"
-            android:exported="false"/>
         <activity
             android:name=".Profile"
             android:exported="false"/>
-        <activity
-            android:name=".EmailVerificationActivity"
-            android:exported="false"/>
-        <activity
 
-            android:name=".EmailVerificationActivity"
-            android:exported="false"/>
-        <activity
-                  
-            android:name=".Profile"
-            android:exported="false"/>
         <activity
 
             android:name=".PostDetailActivity"
