--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -2,22 +2,48 @@ name: Android CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
-    - name: Build and run tests
-      run: ./gradlew build
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
+      - name: Build the project
+        run: ./gradlew build
+
+      - name: Run unit tests
+        run: ./gradlew testDebugUnitTest
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          api-level: 31   # Update to match your target API level
+          target: default
+          channel: 3
+
+      - name: Start AVD emulator
+        run: |
+          echo "Running emulator setup"
+          $ANDROID_HOME/emulator/emulator -avd test -no-skin -no-window -no-audio -gpu off &
+          adb wait-for-device
+          adb shell input keyevent 82
+
+      - name: Run instrumented tests
+        run: ./gradlew connectedDebugAndroidTest
