--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,23 +13,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          api-level: 30
+          target: default
+          arch: x86_64
+          profile: default
+          emulator: true
+          ndk: false
 
-    - name: Build the project
-      run: ./gradlew build
+      - name: Start emulator
+        run: |
+          adb devices
+          echo "Starting emulator..."
+          nohup emulator -avd test -no-window -no-audio -no-snapshot -no-boot-anim &
+          adb wait-for-device
+          adb shell input keyevent 82
 
-    - name: Run unit tests
-      run: ./gradlew testDebugUnitTest
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
 
-    - name: Run instrumented tests
-      run: ./gradlew connectedDebugAndroidTest
+      - name: Build the project
+        run: ./gradlew clean build
+
+      - name: Run unit tests
+        if: success()
+        run: ./gradlew testDebugUnitTest
+
+      - name: Run instrumented tests
+        if: success()
+        run: ./gradlew connectedDebugAndroidTest
