--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -26,30 +27,4 @@ jobs:
         uses: android-actions/setup-android@v2
         with:
           api-level: 30
-          target: default
-          arch: x86_64
-          profile: default
-          emulator: true
-          ndk: false
-
-      - name: Start emulator
-        run: |
-          adb devices
-          echo "Starting emulator..."
-          nohup emulator -avd test -no-window -no-audio -no-snapshot -no-boot-anim &
-          adb wait-for-device
-          adb shell input keyevent 82
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
-
-      - name: Build the project
-        run: ./gradlew clean build
-
-      - name: Run unit tests
-        if: success()
-        run: ./gradlew testDebugUnitTest
-
-      - name: Run instrumented tests
-        if: success()
-        run: ./gradlew connectedDebugAndroidTest
+          target: de
