--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,27 +27,29 @@ jobs:
         uses: android-actions/setup-android@v2
         with:
           api-level: 34
-          target: default
+          target: google_apis/x86_64
           arch: x86_64
-          profile: default
           emulator: true
-          ndk: false
+
+      - name: Install system image
+        run: sdkmanager "system-images;android-30;google_apis;x86_64"
+
+      - name: Create AVD
+        run: echo "no" | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --device "pixel"
 
       - name: Start emulator
         run: |
-          echo "Available devices:"
           adb devices
           echo "Starting emulator..."
           nohup emulator -avd test -no-window -no-audio -no-snapshot -no-boot-anim &
           adb wait-for-device
-          echo "Boot completed"
           adb shell input keyevent 82
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
       - name: Build the project
-        run: ./gradlew clean build
+        run: ./gradlew build
 
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
