--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,29 +27,21 @@ jobs:
         uses: android-actions/setup-android@v2
         with:
           api-level: 30
-          target: google_apis/arm64-v8a
-          arch: arm64-v8a
-          emulator: true
+          build-tools: 30.0.3
 
-      - name: Install ARM system image
-        run: sdkmanager "system-images;android-30;google_apis;arm64-v8a"
+      - name: Install system image
+        run: sdkmanager "system-images;android-30;google_apis;x86_64"
 
       - name: Install emulator
         run: sdkmanager "emulator"
 
-      - name: Add emulator to PATH
-        run: echo "${ANDROID_SDK_ROOT}/emulator" >> $GITHUB_PATH
+      - name: Create AVD
+        run: echo "no" | avdmanager create avd -n test -k "system-images;android-30;google_apis;x86_64" --device "pixel"
 
-      - name: Verify emulator installation
-        run: which emulator
-
-      - name: Create AVD with ARM
-        run: echo "no" | avdmanager create avd -n test -k "system-images;android-30;google_apis;arm64-v8a" --device "pixel"
-
-      - name: Start emulator with ARM
+      - name: Start Emulator
         run: |
-          echo "Starting ARM emulator..."
-          nohup ${ANDROID_SDK_ROOT}/emulator/emulator -avd test -no-window -no-audio -no-snapshot -no-boot-anim -gpu swiftshader_indirect &
+          echo "Starting x86 emulator..."
+          nohup ${ANDROID_SDK_ROOT}/emulator/emulator -avd test -no-window -no-audio -gpu swiftshader_indirect &
           echo "Waiting for emulator to boot..."
           adb wait-for-device
           adb shell input keyevent 82
