Gino workout routines display from database (#107)
* Initial branch commit

* pull request 1 (#32)

* Noah Test

* Noah Test

* Diego Test Commit

---------

Co-authored-by: Noah Wardiya <hh0890@wayne.edu>
Co-authored-by: Diego Z <diezam42@gmail.com>
Co-authored-by: DiegoZ-Official <152233772+DiegoZ-Official@users.noreply.github.com>
Co-authored-by: Ikemba15 <ikemba15@gmail.com>
Co-authored-by: 1102noah <wardiyan1@yahoo.com>

* - Changed home page to tracker page; Changed notification page to progress page

- Added Post.java & PostsAdapter.java; used to implement post feature on dashboard/feed page

- Used RecycleView to display posts on dashboard/feed page

- Added default image to every post, implement Glide library for optimized loading of images

- Posts can currently display title, info/description, and image

* - Created top_menu.xml to display Accounts in top right

- Added Account page; Added explicit intent to start page from other pages

* - Added swipe feature to dismiss posts

- Added Description page that can be used to open posts

- Removed unused import statements

- Edited top and bottom margins of recycle view in dashboard

* - Added MilestonePostsAdapter.java so we can expand the functionality of posts to be used with milestones

- Created square tiles with milestone_list_item.xml

- Added square tiles and swiping horizontally on Progress page

* commit

* ...

* - Re-added all removed changes from latest merged branch

* - Re added deploymentTargetSelector.xml

* - Re added deploymentTargetSelector.xml

* - Added floating action button to create workout routines, posts

* - Added WorkoutRoutineCreation form and PostCreation form pages

- Added setting page

- Added additional floating action buttons for posts and workout routines

* Initial branch commit

* - Changed home page to tracker page; Changed notification page to progress page

- Added Post.java & PostsAdapter.java; used 

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,22 @@
                   
             android:name=".Profile"
             android:exported="false" />
+
+        <activity
+            android:name=".PostDetailActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".PostDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PostDetailActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".PostDetailActivity"
+            android:exported="false" />
+
         <activity
             android:name=".PostDetailActivity"
             android:exported="false" />
