Updated, Accessibility, Bio, and Notifications Added, along with functionality etc.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,19 +70,16 @@
             android:exported="false" />
 
         <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
+            android:name=".NotificationsActivity"
+            />
 
         <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
+            android:name=".BioActivity"
+            />
 
         <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
+            android:name=".AccessibilityActivity"
+            />
 
         <activity
             android:name=".AccountActivity"
