--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
         android:allowBackup="true"
@@ -66,17 +65,24 @@
             android:exported="false" />
 
         <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
+            android:name=".EmailVerificationActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".Profile"
+            android:exported="false"/>
+        <activity
+            android:name=".EmailVerificationActivity"
+            android:exported="false"/>
+        <activity
 
+            android:name=".EmailVerificationActivity"
+            android:exported="false"/>
         <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
+                  
+            android:name=".Profile"
+            android:exported="false"/>
         <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
 
-        <activity
             android:name=".PostDetailActivity"
             android:exported="false" />
 
