--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,30 +65,14 @@
             android:exported="false" />
 
         <activity
-            android:name=".EmailVerificationActivity"
+            android:name=".ForgotPassword"
             android:exported="false"/>
-        <activity
-            android:name=".Profile"
-            android:exported="false"/>
-        <activity
-            android:name=".EmailVerificationActivity"
-            android:exported="false"/>
-        <activity
 
-            android:name=".EmailVerificationActivity"
-            android:exported="false"/>
-        <activity
-                  
-            android:name=".Profile"
-            android:exported="false"/>
         <activity
 
             android:name=".PostDetailActivity"
             android:exported="false" />
 
-        <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
 
         <activity
             android:name=".AccountActivity"
