Adding forgot password (#116)
* Merging Main (93) into localNoah (#94)

* link database to workout routines and post creation (#84)

* Connecting and Testing Firebase Database

* Removing test code for DB

* Creating Registration Page

* Linking Registration Page to the button

* Added Functionality to "Back to Login" Button

* Broken Registration

* Fixed Mistakes on Registration Page

* Add new users to firebase

* Gives new error if the user enters email already in use

* Login with messages completed

* Revert "Merge pull request #59 from WSU-4110/Reyna"

* Added Logout button

* Changed Username to Email in Login

* Update Oct 23 3pm (#64)

* Oct 3 6pm  (#48) (#54)

* UseCaseDiagram

* UseCaseDiagram

* Update Untitled Diagram.drawio

* Update Untitled Diagram.drawio

* Pull Request (#33)

* Initial branch commit

* pull request 1 (#32)

* Noah Test

* Noah Test

* Diego Test Commit

---------







* - Changed home page to tracker page; Changed notification page to progress page

- Added Post.java & PostsAdapter.java; used to implement post feature on dashboard/feed page

- Used RecycleView to display posts on dashboard/feed page

- Added default image to every post, implement Glide library for optimized loading of images

- Posts can currently display title, info/description, and image

---------







* Diego pull request (#35)

* Updated Login Screen and Theme

* Update Oct 2 3pm (#34)

* UseCaseDiagram

* UseCaseDiagram

* Update Untitled Diagram.drawio

* Update Untitled Diagram.drawio

* Pull Request (#33)

* Initial branch commit

* pull request 1 (#32)

* Noah Test

* Noah Test

* Diego Test Commit

---------







* - Changed home page to tracker page; Changed notification page to progress page

- Added Post.java & PostsAdapter.java; used to implement post feature on dashboard/feed page

- Used RecycleView to display posts on dashbo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,8 +65,9 @@
             android:exported="false" />
 
         <activity
-            android:name=".EmailVerificationActivity"
+            android:name=".ForgotPassword"
             android:exported="false"/>
+
         <activity
             android:name=".NotificationsActivity"
             />
@@ -79,14 +80,17 @@
                   
             android:name=".Profile"
             android:exported="false"/>
+      
         <activity
 
             android:name=".PostDetailActivity"
             android:exported="false" />
 
+
         <activity
             android:name=".AccessibilityActivity"
             />
+
 
         <activity
             android:name=".AccountActivity"
