--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
         android:allowBackup="true"
@@ -65,32 +66,19 @@
             android:exported="false" />
 
         <activity
-            android:name=".ForgotPassword"
-            android:exported="false"/>
-
-        <activity
-            android:name=".NotificationsActivity"
-            />
-
-            android:name=".EmailVerificationActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".BioActivity"
-            />
-                  
-            android:name=".Profile"
-            android:exported="false"/>
-      
-        <activity
-
             android:name=".PostDetailActivity"
             android:exported="false" />
 
-
+        <activity
+            android:name=".BioActivity"
+            android:exported="false" />
         <activity
             android:name=".AccessibilityActivity"
-            />
+            android:exported="false" />
 
+        <activity
+            android:name=".NotificationsActivity"
+            android:exported="false" />
 
         <activity
             android:name=".AccountActivity"
