WORKING FILE PT2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,6 +85,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".ForgotPassword"
+            android:exported="false" />
+
+        <activity
             android:name=".HomeActivity"
             android:exported="true"
             android:label="@string/title_activity_home" />
