--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".PostCreationActivity"
+            android:name=".WorkoutRoutineCreationActivity"
             android:exported="false"
             android:parentActivityName=".HomeActivity">
             <meta-data
@@ -34,7 +34,7 @@
         </activity>
 
         <activity
-            android:name=".WorkoutRoutineCreationActivity"
+            android:name=".WorkoutCreationActivity"
             android:exported="false"
             android:parentActivityName=".HomeActivity">
             <meta-data
@@ -66,7 +66,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
 
         <activity
@@ -81,41 +81,41 @@
             android:exported="false" />
 
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
 
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
 
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".PostDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
 
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".PostDetailActivity"
+            android:name=".WorkoutRoutineDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WorkoutRoutineDetailActivity"
             android:exported="false" />
         <activity
             android:name=".AccountActivity"
